# FastAPI_CRM-System

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose-dev.yaml  docker-compose.yaml  main.py  nginx.conf  pyproject.toml  readme  requirements.txt
actions/: create_superuser.py
api/: __init__.py  authentication.py  messages.py  news.py  user.py  user_role.py
api_v1/: __init__.py  authentication.py  category_product.py  news.py  notification.py  product.py  user.py  user_role.py
app/: exceptions.py
app/authentication/: __init__.py  models.py  routers.py  service.py  services.py  transport.py  user_manager.py  utils.py
app/news/: __init__.py  dao.py  models.py  schemas.py
app/products/: __init__.py  dao.py  exceptions.py  models.py  schemas.py
app/role/: __init__.py  dao.py  exceptions.py  models.py  schemas.py
app/user/: dao.py  models.py  schemas.py  upload_image.py
core/mixins/: __init__.py
core/repository/: __init__.py  base.py
core/settings/: __init__.py  config.py  database.py  env_config.py
core/utils/: __init__.py  convert_to_upper.py
crm_db_dev/: docker-compose.yaml
migrations/: env.py
migrations/versions/: 01e35ac2cb99_создание_таблицы_access_token.py  16c8de718be8_таблица_ролей_пользователя.py  4fec8a17f533_create_table_user.py  5304a593627d_таблица_новости.py  799f2e744280_добавление_новых_полей_для_пользователя.py  9be2213fc9a7_обновление_таблицы_ролей_уникальная_роль.py  d9bc93f5bc10_таблицы_категории_товаров_товары.py  (+1 more)
settings/: config.py  database.py  env_config.py
(+9 files in other folders)
