[tool.poetry]
name = "chat-messages"
version = "0.1.0"
description = ""
authors = ["vellimir <kkazancov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.7"
fastapi = {extras = ["all"], version = "^0.115.12"}
pydantic = {extras = ["dotenv"], version = "^2.10.6"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.39"}
aiosmtplib = "^4.0.0"
email-validator = "^2.2.0"
aiosqlite = "^0.21.0"
alembic = "^1.15.1"
requests = "^2.32.3"
pyjwt = "^2.10.1"
fastapi-users = {extras = ["sqlalchemy"], version = "^14.0.1"}
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
